# qmp-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  safe_ops.rs
src/: cancel.rs  client.rs  error.rs  event_stream.rs  lib.rs  transport.rs
src/mock/: mod.rs
src/ops/: mod.rs  policy.rs  retry.rs  state.rs  types.rs
src/types/: event.rs  greeting.rs  message.rs  mod.rs
tests/: mock_basic.rs  transcript_replay.rs
