[package]
name = "qmp"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
description = "QEMU QMP client library"
readme = "README.md"
documentation = "https://docs.rs/qmp"
repository = "https://github.com/lvillis/qmp-rs"
homepage = "https://github.com/lvillis/qmp-rs"
keywords = ["qemu", "qmp", "proxmox", "pve"]
categories = ["asynchronous", "network-programming"]

[workspace]
members = ["."]

[workspace.dependencies]
fastrand = { version = "2.3.0", default-features = false, features = ["std"] }
futures-core = { version = "0.3.31", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
serde_path_to_error = { version = "0.1.20", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["sync"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }

# dev/test
# Note: keep dev dependencies here as well so they are managed centrally.
tempfile = { version = "3.24.0", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "fmt"] }

[dependencies]
fastrand = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []

# Enable spans & structured events via the `tracing` ecosystem.
tracing = ["dep:tracing"]

# Enable mock server & replay helpers.
mock = []

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
